docker-mail.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-mail
  namespace: default
  labels:
    app: docker-mail
    run: docker-mail
spec:
  ports:
  - port: 8000
    name: http
  selector:
    app: docker-mail
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: docker-mail
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-mail
    spec:
      containers:
      - name: docker-mail
        image: docker-mail:v0
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8000
---
